# Part-2-Python-CLI-Tool-Salesforce-File-Upload-

./: .env.example  pyproject.toml
headshot_upload/: __init__.py  __main__.py  config.py
headshot_upload/cli/: commands.py
headshot_upload/modules/: auth.py  uploader.py
python/: .gitignore  README.md  requirements.txt
python/headshot_upload/modules/: encoder.py  salesforce_api.py  scanner.py
python/tests/: test_auth.py  test_config.py  test_salesforce_api.py  test_uploader.py
tests/: conftest.py  test_commands.py  test_encoder.py  test_scanner.py
